; ModuleID = '/home/carl/AnghaBench/esp-idf/components/soc/src/hal/extr_spi_flash_hal_iram.c_spi_flash_hal_read.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/soc/src/hal/extr_spi_flash_hal_iram.c_spi_flash_hal_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__*)* }

@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spi_flash_hal_read(%struct.TYPE_5__* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %11 = call i32* @get_spi_dev(%struct.TYPE_5__* %10)
  store i32* %11, i32** %9, align 8
  %12 = load i32*, i32** %9, align 8
  %13 = load i32, i32* %7, align 4
  %14 = shl i32 %13, 8
  %15 = call i32 @spi_flash_ll_set_address(i32* %12, i32 %14)
  %16 = load i32*, i32** %9, align 8
  %17 = load i32, i32* %8, align 4
  %18 = mul nsw i32 %17, 8
  %19 = call i32 @spi_flash_ll_set_miso_bitlen(i32* %16, i32 %18)
  %20 = load i32*, i32** %9, align 8
  %21 = call i32 @spi_flash_ll_user_start(i32* %20)
  %22 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load i32 (%struct.TYPE_5__*)*, i32 (%struct.TYPE_5__*)** %23, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %26 = call i32 %24(%struct.TYPE_5__* %25)
  %27 = load i32*, i32** %9, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = load i32, i32* %8, align 4
  %30 = call i32 @spi_flash_ll_get_buffer_data(i32* %27, i8* %28, i32 %29)
  %31 = load i32, i32* @ESP_OK, align 4
  ret i32 %31
}

declare dso_local i32* @get_spi_dev(%struct.TYPE_5__*) #1

declare dso_local i32 @spi_flash_ll_set_address(i32*, i32) #1

declare dso_local i32 @spi_flash_ll_set_miso_bitlen(i32*, i32) #1

declare dso_local i32 @spi_flash_ll_user_start(i32*) #1

declare dso_local i32 @spi_flash_ll_get_buffer_data(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
